package client

import (
	"bufio"
	"context"
	"fmt"
	"io"
	"log/slog"
	"net/http"
	"os"
	"runtime"
	"strings"
	"time"

	"crypto/tls"

	"connectrpc.com/connect"

	"github.com/jh125486/gradebot/pkg/contextlog"
	"github.com/jh125486/gradebot/pkg/proto"
	"github.com/jh125486/gradebot/pkg/proto/protoconnect"
	"github.com/jh125486/gradebot/pkg/rubrics"
)

// WorkDir is a validated project directory path
type WorkDir string

// Validate implements Kong's Validatable interface for WorkDir validation
func (w WorkDir) Validate() error {
	path := string(w)
	if path == "" {
		return fmt.Errorf("work directory not specified")
	}

	info, err := os.Stat(path)
	if err != nil {
		return &DirectoryError{Err: err}
	}
	if !info.IsDir() {
		return fmt.Errorf("work directory %q is not a directory", path)
	}

	f, err := os.Open(path)
	if err != nil {
		return &DirectoryError{Err: err}
	}
	defer f.Close()

	if _, err := f.Readdirnames(1); err != nil && err != io.EOF {
		return &DirectoryError{Err: err}
	}

	return nil
}

// String returns the string representation of WorkDir
func (w WorkDir) String() string {
	return string(w)
}

// DirectoryError represents an error related to directory access
type DirectoryError struct {
	Err error
}

func (e *DirectoryError) Error() string {
	return fmt.Sprintf("%v\n%s", e.Err, e.getPermissionHelp())
}

func (e *DirectoryError) Unwrap() error {
	return e.Err
}

func (e *DirectoryError) getPermissionHelp() string {
	switch runtime.GOOS {
	case "darwin":
		return "macOS help: System Preferences → Security & Privacy → Privacy → Full Disk Access\nOr try: chmod 755 /path/to/directory"
	case "windows":
		return "Windows help: Right-click folder → Properties → Security → Edit permissions\nOr run as Administrator"
	case "linux":
		return "Linux help: chmod 755 /path/to/directory\nOr check file ownership with: ls -la"
	default:
		return "Check directory permissions and ownership"
	}
}

// Config represents configuration for the grading client
type Config struct {
	ServerURL string

	// Execution specific fields
	Dir    WorkDir
	RunCmd string
	Env    map[string]string

	// Connect client for the QualityService
	QualityClient protoconnect.QualityServiceClient

	// Connect client for the RubricService
	RubricClient protoconnect.RubricServiceClient

	// Writer is where the resulting rubric table will be written. If nil, defaults to os.Stdout
	Writer io.Writer

	// Reader is where to read user input from. If nil, defaults to os.Stdin
	Reader io.Reader

	// ProgramBuilder creates a ProgramRunner for a given working directory and run command.
	// If nil, defaults to creating a Program with ExecCommandBuilder using Env.
	// This is the primary extension point for testing and customization.
	ProgramBuilder func(workDir, runCmd string) (rubrics.ProgramRunner, error)
}

// AuthTransport injects an Authorization header for every outgoing request.
type AuthTransport struct {
	base  http.RoundTripper
	token string
}

// NewAuthTransport creates a new AuthTransport with the given token.
// If base is nil, defaultTLSTransport() is used.
func NewAuthTransport(token string, base http.RoundTripper) *AuthTransport {
	if base == nil {
		base = defaultTLSTransport()
	}
	return &AuthTransport{
		base:  base,
		token: token,
	}
}

// defaultTLSTransport clones http.DefaultTransport with a TLS config that mirrors the
// server's downgraded TLS settings so clients can communicate through strict proxies.
func defaultTLSTransport() *http.Transport {
	if transport, ok := http.DefaultTransport.(*http.Transport); ok {
		clone := transport.Clone()
		clone.TLSClientConfig = clientTLSConfig()
		return clone
	}
	return &http.Transport{TLSClientConfig: clientTLSConfig()}
}

// clientTLSConfig matches the server TLS policy (TLS 1.2 + modern cipher suites) to keep
// Connect/gRPC requests compatible with corporate middleboxes that block TLS 1.3.
func clientTLSConfig() *tls.Config {
	return &tls.Config{
		MinVersion: tls.VersionTLS12,
		CipherSuites: []uint16{
			tls.TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,
			tls.TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,
			tls.TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,
			tls.TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,
		},
	}
}

// RoundTrip implements http.RoundTripper by adding an Authorization header to each request.
func (t *AuthTransport) RoundTrip(req *http.Request) (*http.Response, error) {
	// Clone request to avoid mutating the original
	clone := req.Clone(req.Context())
	clone.Header.Set("Authorization", "Bearer "+t.token)
	return t.base.RoundTrip(clone)
}

// UploadResult prompts the user for confirmation and uploads the rubric result to the server.
// If RubricClient is nil, logs and returns without error.
// If Reader is nil, defaults to os.Stdin for user input.
func (cfg *Config) UploadResult(ctx context.Context, result *rubrics.Result) error {
	if cfg.RubricClient == nil {
		contextlog.From(ctx).InfoContext(ctx, "Skipping upload - no rubric client configured")
		return nil
	}

	if !PromptForSubmission(ctx, cfg.Writer, cfg.Reader) {
		return nil
	}

	// Convert rubrics.Result to protobuf format
	rubricItems := make([]*proto.RubricItem, len(result.Rubric))
	for i, item := range result.Rubric {
		rubricItems[i] = &proto.RubricItem{
			Name:    item.Name,
			Points:  item.Points,
			Awarded: item.Awarded,
			Note:    item.Note,
		}
	}

	req := connect.NewRequest(&proto.UploadRubricResultRequest{
		Result: &proto.Result{
			SubmissionId: result.SubmissionID,
			Timestamp:    result.Timestamp.Format(time.RFC3339),
			Rubric:       rubricItems,
			Project:      result.Project,
		},
	})

	resp, err := cfg.RubricClient.UploadRubricResult(ctx, req)
	if err != nil {
		return fmt.Errorf("failed to upload result: %w", err)
	}

	contextlog.From(ctx).InfoContext(ctx, "Successfully uploaded rubric result",
		slog.String("submission_id", result.SubmissionID),
		slog.String("response", resp.Msg.Message),
	)

	return nil
}

// PromptForSubmission asks the user if they want to submit results to the server.
// Returns true if user confirms, false otherwise.
// Uses the provided writer for prompts, or os.Stdout if writer is nil.
// Uses the provided reader for input, or os.Stdin if reader is nil.
// Accepts "y", "Y", "yes", "YES" (case-insensitive, whitespace-trimmed).
func PromptForSubmission(ctx context.Context, w io.Writer, r io.Reader) bool {
	if w == nil {
		w = os.Stdout
	}
	if r == nil {
		r = os.Stdin
	}

	fmt.Fprintf(w, "\nSubmit results to server? (y/n): ")
	bufReader := bufio.NewReader(r)
	resp, err := bufReader.ReadString('\n')
	if err != nil {
		contextlog.From(ctx).WarnContext(ctx, "Failed to read user input", slog.Any("error", err))
		return false
	}

	resp = strings.TrimSpace(resp)
	resp = strings.ToLower(resp)

	return resp == "y" || resp == "yes"
}

// ExecuteProject executes a grading workflow using the provided evaluators.
// The name parameter identifies the project/assignment being graded.
// The instructions parameter is used for AI quality evaluation when QualityClient is configured.
// If bag is nil, a new empty bag is created. Otherwise, the provided bag is used (for pre-configured context).
// If ProgramBuilder is nil, defaults to creating a Program with ExecCommandBuilder using Env.
// This function is generic and can be used by any course-specific implementation.
func ExecuteProject(ctx context.Context, cfg *Config, name, instructions string, bag rubrics.RunBag, items ...rubrics.Evaluator) error {
	if cfg.ProgramBuilder == nil {
		cfg.ProgramBuilder = func(workDir, runCmd string) (rubrics.ProgramRunner, error) {
			return rubrics.NewProgram(workDir, runCmd, &rubrics.ExecCommandBuilder{Context: ctx, Env: cfg.Env}), nil
		}
	}

	program, err := cfg.ProgramBuilder(cfg.Dir.String(), cfg.RunCmd)
	if err != nil {
		contextlog.From(ctx).ErrorContext(ctx, "failed to create program", slog.Any("error", err))
		return err
	}

	defer func() {
		if err := program.Cleanup(ctx); err != nil {
			contextlog.From(ctx).ErrorContext(ctx, "failed to cleanup program", slog.Any("error", err))
		}
	}()

	results := rubrics.NewResult(name)
	if bag == nil {
		bag = make(rubrics.RunBag)
	}

	// Run the program if it's not already running
	if err := program.Run(); err != nil {
		contextlog.From(ctx).ErrorContext(ctx, "failed to start program", slog.Any("error", err))
		return err
	}

	// Give program time to start.
	time.Sleep(1 * time.Second)

	if cfg.QualityClient != nil {
		sourceFS := os.DirFS(program.Path())
		items = append(items, rubrics.EvaluateQuality(cfg.QualityClient, sourceFS, instructions))
	}

	for _, item := range items {
		evalCtx, cancel := context.WithTimeout(ctx, 30*time.Second)
		results.Rubric = append(results.Rubric, item(evalCtx, program, bag))
		cancel()
	}

	// Print rubric table to configured writer (default to stdout)
	results.Render(cfg.Writer)

	// Upload the results to the server with user confirmation
	if err := cfg.UploadResult(ctx, results); err != nil {
		contextlog.From(ctx).ErrorContext(ctx, "Failed to upload rubric result", slog.Any("error", err))
		// Don't fail the whole execution just because upload failed
	}

	return nil
}
